add dependencies config

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,8 @@ on:
 permissions:
   contents: read
   id-token: write
-  security-events: write    
+  security-events: write
+  dependencies: write
 
 jobs:
   build:
